# Poisson2DSolver

./: .gitignore  CMakeLists.txt  README.md
Src/: main.cpp
Src/core/: Config.cpp  Config.hpp  FiniteElement.cpp  FiniteElement.hpp  LinearSystem.cpp  LinearSystem.hpp  Mesh.cpp  Mesh.hpp  Solver.cpp  Solver.hpp
Src/elements/: Element.hpp  QuadElement.cpp  QuadElement.hpp  TriangleElement.cpp  TriangleElement.hpp
Src/utils/: Integration.cpp  Integration.hpp  Parser.cpp  Parser.hpp  VTKWriter.cpp  VTKWriter.hpp
examples/: input.json  input_simple.txt  laplace_test.json
tests/: test_analytical.cpp  test_elements.cpp  test_main.cpp  test_mesh.cpp
